--- a/Similarity1.ipynb
+++ b/Similarity1.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "73f18cf4",
+   "metadata": {},
+   "source": [
+    "# Semantic Search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "48dacc15",
+   "id": "cf71d059",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +385,7 @@
     "from sentence_transformers import SentenceTransformer\n",
     "sentences = [\"This is an example sentence\", \"Each sentence is converted\"]\n",
     "\n",
-    "model = SentenceTransformer('sentence-transformers/paraphrase-MiniLM-L6-v2')\n",
+    "model_p = SentenceTransformer('sentence-transformers/paraphrase-MiniLM-L6-v2')\n",
     "embeddings = model.encode(sentences)\n",
     "print(embeddings)"
    ]
@@ -385,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "688631cd",
+   "id": "96c60f92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,9 +406,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a6f8ac4",
+   "metadata": {},
+   "source": [
+    "### Similarity functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cbb92329",
+   "execution_count": 19,
+   "id": "c8f38ce3",
    "metadata": {},
    "outputs": [
     {
@@ -412,15 +428,18 @@
     }
    ],
    "source": [
+    "# Dot score\n",
     "from sentence_transformers import  util\n",
     "print(\"Similarity:\", util.dot_score(query_embedding, passage_embedding))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8e7d8b51",
-   "metadata": {},
+   "execution_count": 20,
+   "id": "0a0c4f80",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -431,151 +450,102 @@
     }
    ],
    "source": [
+    "# Cosine score\n",
     "print(\"Similarity:\", util.pytorch_cos_sim(query_embedding, passage_embedding))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3b09bdb5",
+   "cell_type": "markdown",
+   "id": "6be55be3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "384"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(embeddings[1])"
+    "## Semantic Textual Similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d324281f",
+   "execution_count": 14,
+   "id": "05a172f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "model_sts = SentenceTransformer('all-MiniLM-L6-v2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "eb2ed8dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Two lists of sentences\n",
+    "sentences1 = ['The cat sits outside',\n",
+    "             'A man is playing guitar',\n",
+    "             'The new movie is awesome']\n",
+    "\n",
+    "sentences2 = ['The dog plays in the garden',\n",
+    "              'A woman watches TV',\n",
+    "              'The new movie is so great']\n",
+    "\n",
+    "#Compute embedding for both lists\n",
+    "embeddings1 = model_sts.encode(sentences1, convert_to_tensor=True)\n",
+    "embeddings2 = model_sts.encode(sentences2, convert_to_tensor=True)\n",
+    "\n",
+    "#Compute cosine-similarits\n",
+    "cosine_scores = util.pytorch_cos_sim(embeddings1, embeddings2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "588d8118",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cat sits outside \t\t The dog plays in the garden \t\t Score: 0.2838\n",
+      "A man is playing guitar \t\t A woman watches TV \t\t Score: -0.0327\n",
+      "The new movie is awesome \t\t The new movie is so great \t\t Score: 0.8939\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Output the pairs with their score\n",
+    "for i in range(len(sentences1)):\n",
+    "    print(\"{} \\t\\t {} \\t\\t Score: {:.4f}\".format(sentences1[i], sentences2[i], cosine_scores[i][i]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "adfd99ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.22117780e-01,  6.70228660e-01,  3.17165703e-01, -5.61465979e-01,\n",
-       "       -3.79931659e-01,  1.35664120e-01,  6.51261985e-01, -7.98957527e-01,\n",
-       "        3.45511436e-01,  2.38573134e-01,  2.04020634e-01, -5.47153503e-02,\n",
-       "        5.39748490e-01, -6.22758150e-01,  3.02774668e-01,  4.65011388e-01,\n",
-       "       -8.24543774e-01,  6.47913754e-01, -7.25303590e-01, -4.88030523e-01,\n",
-       "       -1.83312848e-04,  9.65790078e-02, -5.32668293e-01,  1.06890939e-01,\n",
-       "        3.01746696e-01,  8.48216534e-01, -2.85287946e-01, -1.55618325e-01,\n",
-       "        3.67129058e-01,  2.56738931e-01, -2.91775972e-01,  7.72702217e-01,\n",
-       "        4.45749909e-01,  1.67509413e-03,  2.73589399e-02,  3.15588146e-01,\n",
-       "       -6.06933951e-01,  4.27502543e-01,  4.36705589e-01,  1.60652380e-02,\n",
-       "       -9.74193811e-02, -1.01036526e-01,  4.39795293e-02, -8.09034109e-02,\n",
-       "       -4.56917197e-01, -1.95881322e-01, -9.55831528e-01,  1.76067159e-01,\n",
-       "       -1.53166994e-01,  2.49155819e-01, -1.36732906e-01,  4.85116959e-01,\n",
-       "       -1.05666506e+00,  1.02808726e+00,  5.49656861e-02,  3.15270536e-02,\n",
-       "        2.92979896e-01,  4.20952290e-01, -1.30627170e-01, -3.43076557e-01,\n",
-       "       -4.56301540e-01,  4.06446457e-01, -1.11816585e+00,  6.47091791e-02,\n",
-       "       -1.56589270e-01, -4.32856351e-01,  7.34381974e-02,  7.15610608e-02,\n",
-       "       -5.01722038e-01,  3.84135008e-01, -1.10275745e-01,  1.21705048e-01,\n",
-       "       -1.02938814e-02, -3.40220720e-01, -3.71312112e-01,  3.03929746e-02,\n",
-       "       -1.39320180e-01,  2.52972275e-01, -3.37456726e-02,  3.29372846e-02,\n",
-       "       -6.50845235e-03,  6.77699298e-02, -2.82054812e-01, -4.28165108e-01,\n",
-       "        3.56341690e-01, -2.61920244e-01, -2.42012262e-01,  2.53995936e-02,\n",
-       "        3.65716487e-01,  8.57387409e-02, -5.70777655e-01, -3.30143005e-01,\n",
-       "        1.07893646e+00,  9.63202417e-02,  5.75738728e-01,  1.69018373e-01,\n",
-       "       -3.91616434e-01, -3.23540479e-01,  7.30906308e-01,  4.60695654e-01,\n",
-       "       -3.24070185e-01,  6.47069097e-01, -6.87667072e-01, -8.37692916e-01,\n",
-       "       -8.09252635e-02, -8.00452650e-01, -4.83660959e-02, -1.48769692e-01,\n",
-       "        1.53943807e-01, -1.40149519e-01, -1.90814003e-01,  1.19010620e-01,\n",
-       "        5.80705941e-01, -2.25351453e-02,  2.25869104e-01,  3.82302552e-01,\n",
-       "        2.89713740e-01, -1.35634139e-01, -5.76598048e-02,  2.37224534e-01,\n",
-       "        4.27740097e-01,  3.96110624e-01,  7.55683705e-02,  7.45883465e-01,\n",
-       "       -2.78996527e-01, -3.22099686e-01,  4.32664007e-01,  2.49256968e-01,\n",
-       "       -3.58579345e-02, -1.58898771e-01,  2.79920250e-01,  1.47267893e-01,\n",
-       "        2.49358535e-01,  9.11013901e-01, -2.06317231e-01, -4.77560490e-01,\n",
-       "        5.53599931e-02, -1.77333638e-01,  1.11120142e-01,  8.49527344e-02,\n",
-       "        1.69554546e-01,  1.14803649e-01,  5.43152392e-02,  9.58801731e-02,\n",
-       "       -2.64685079e-02,  4.40716356e-01, -6.23741210e-01,  5.93851507e-01,\n",
-       "        4.56237555e-01,  2.92325914e-01, -1.87388644e-01, -2.04024538e-01,\n",
-       "       -3.15477550e-01, -6.46872520e-01, -1.14079617e-01, -1.41986638e-01,\n",
-       "       -6.11481965e-01, -3.98513563e-02, -1.88295424e-01,  1.59376696e-01,\n",
-       "       -2.64947135e-02,  1.84536297e-02, -3.44675899e-01,  5.21172024e-02,\n",
-       "        4.27536845e-01,  6.31815717e-02,  1.75883994e-01,  2.22117424e-01,\n",
-       "       -2.24891424e-01,  2.12633193e-01,  6.46662772e-01, -2.21451953e-01,\n",
-       "        9.84916016e-02, -5.96297979e-01, -5.17508566e-01,  1.56824663e-01,\n",
-       "       -1.08629232e-02,  2.60057479e-01, -8.53937343e-02,  1.20264135e-01,\n",
-       "       -4.04517241e-02, -5.08087836e-02, -1.54685959e-01, -8.34449753e-02,\n",
-       "        1.65354367e-02,  2.04883382e-01, -2.34878644e-01,  4.13352638e-01,\n",
-       "       -2.51909733e-01,  1.20232860e-02, -4.16343838e-01, -1.29102170e-01,\n",
-       "       -5.64183109e-02,  3.89560193e-01,  4.52478081e-02, -3.74179095e-01,\n",
-       "        1.64490283e-01,  1.51994169e-01, -7.21264780e-01, -2.71770984e-01,\n",
-       "       -2.47592330e-01,  1.15428686e-01, -1.20141171e-01, -1.28167367e-03,\n",
-       "        4.42487955e-01,  1.21754371e-01, -2.74398774e-02, -2.43786335e-01,\n",
-       "       -4.02907461e-01,  6.02717876e-01, -1.22257672e-01, -2.46097133e-01,\n",
-       "        2.99186885e-01,  3.85205261e-02, -1.94833934e-01, -7.01021850e-02,\n",
-       "        4.94789593e-02, -3.52766700e-02,  4.66189533e-03, -5.68432629e-01,\n",
-       "        3.71281862e-01, -5.44032276e-01,  6.20304048e-01, -1.74593017e-01,\n",
-       "       -3.03132027e-01,  6.27285838e-01, -4.23184961e-01,  5.70291102e-01,\n",
-       "        1.90408662e-01, -3.65758508e-01, -8.11722949e-02,  2.05405857e-02,\n",
-       "       -1.50952384e-01, -2.78890520e-01, -1.76089406e-02, -4.50592518e-01,\n",
-       "        2.40074813e-01,  1.80715665e-01, -1.11048579e-01,  4.86579053e-02,\n",
-       "        3.67674261e-01,  1.27850801e-01,  1.70472085e-01,  1.90567985e-01,\n",
-       "       -2.36593246e-01,  6.15671694e-01, -2.98200637e-01,  3.24574858e-02,\n",
-       "       -3.87212634e-01, -3.39149952e-01, -5.18185347e-02, -1.11735724e-01,\n",
-       "        2.68297940e-01,  2.88409770e-01, -2.66115338e-01, -2.45580152e-01,\n",
-       "       -1.18816257e-01,  3.25573355e-01,  4.16768789e-02, -3.98375720e-01,\n",
-       "        9.52066362e-01, -4.89476360e-02, -1.58511803e-01,  7.74432898e-01,\n",
-       "        8.62526894e-02, -1.22658074e-01, -6.78221643e-01,  1.02282047e-01,\n",
-       "       -3.22187126e-01, -8.61026570e-02, -5.59760869e-01,  1.39543330e-02,\n",
-       "       -1.58281788e-01,  1.66223962e-02,  1.65275335e-01,  1.81626659e-02,\n",
-       "       -7.83488572e-01, -3.86039644e-01, -2.13515997e-01, -6.27359748e-01,\n",
-       "       -6.42790720e-02, -5.54327786e-01, -2.38060772e-01,  4.02368158e-01,\n",
-       "       -1.95634559e-01,  3.45041752e-01,  2.37833872e-01, -3.10883850e-01,\n",
-       "        3.52888614e-01,  1.21430002e-01,  9.14797783e-02,  1.34787932e-01,\n",
-       "        9.44172218e-02, -2.06169531e-01, -9.11695734e-02,  1.44251555e-01,\n",
-       "       -3.74656916e-01, -1.45803450e-03,  1.42447099e-01, -3.51943970e-01,\n",
-       "       -2.42590234e-01,  4.66880687e-02, -3.35976742e-02,  4.62188512e-01,\n",
-       "        3.73314619e-02, -3.07352751e-01, -9.65389982e-02,  3.62579614e-01,\n",
-       "       -4.63332862e-01,  1.79971561e-01,  4.10492420e-01, -2.32399419e-01,\n",
-       "       -4.39407021e-01,  1.24729602e-02, -1.83561757e-01,  1.51428759e-01,\n",
-       "        3.33959430e-01, -2.98683941e-01,  1.33110955e-01,  6.03317261e-01,\n",
-       "       -1.23517245e-01, -9.43000335e-03, -8.70035827e-01,  1.64422408e-01,\n",
-       "        5.37460327e-01, -3.82127434e-01,  4.23750766e-02, -1.44015206e-02,\n",
-       "       -2.82622695e-01, -2.86038965e-01, -1.37677804e-01,  3.75809163e-01,\n",
-       "        8.25682580e-02, -2.82288074e-01, -6.39907047e-02,  3.01700950e-01,\n",
-       "       -5.73697209e-04, -4.73891906e-02, -1.35147264e-02, -5.46100773e-02,\n",
-       "        2.93633133e-01,  2.37079978e-01, -2.11914495e-01,  7.33982995e-02,\n",
-       "        7.56558552e-02, -2.29913760e-02,  2.29530618e-01,  2.53195584e-01,\n",
-       "        1.27075732e-01,  8.95291865e-02,  7.05323145e-02,  3.06594167e-02,\n",
-       "        8.12447444e-02,  6.87707290e-02, -6.92138448e-02, -4.16388541e-01,\n",
-       "        7.99700916e-01, -1.08688809e-01,  2.86233902e-01,  1.30973205e-01,\n",
-       "       -1.95942685e-01, -3.55908006e-01, -3.05961907e-01,  4.73253399e-01,\n",
-       "       -4.25739437e-01, -4.20842618e-01,  4.21068333e-02, -1.74619630e-01,\n",
-       "        1.74147412e-01, -5.08316338e-01, -2.93726861e-01,  3.16563934e-01,\n",
-       "        4.29774374e-01, -3.92624855e-01,  3.15939337e-01, -4.30918574e-01,\n",
-       "        2.36844376e-01,  5.73047101e-01,  4.85777766e-01,  1.85360789e-01,\n",
-       "        7.73248449e-02,  4.17804509e-01,  4.38058734e-01, -6.62089527e-01],\n",
-       "      dtype=float32)"
+       "tensor([[ 0.2838,  0.1310, -0.0029],\n",
+       "        [ 0.2277, -0.0327, -0.0136],\n",
+       "        [ 0.0543, -0.0502,  0.8939]], device='cuda:0')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "embeddings[1]"
+    "cosine_scores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6107d77b",
+   "id": "ac8d3df7",
    "metadata": {},
    "outputs": [],
    "source": []
